[gd_scene load_steps=3 format=3 uid="uid://c8pjwujd3oyne"]

[ext_resource type="Script" path="res://MainGame/main_game_computer.gd" id="1_d3cnl"]
[ext_resource type="Texture2D" uid="uid://bmeb0fydo211v" path="res://textures/power_off_white.svg" id="2_6ou4h"]

[node name="MainGame_Computer" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.995906, 0.991586)
script = ExtResource("1_d3cnl")

[node name="Stocks" type="Button" parent="."]
custom_minimum_size = Vector2(280, 280)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -460.0
offset_top = -140.0
offset_right = -180.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 180
text = "üìà"

[node name="Bank" type="Button" parent="."]
custom_minimum_size = Vector2(280, 280)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -140.0
offset_right = 140.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 180
text = "üêñ"

[node name="Calender" type="Button" parent="."]
custom_minimum_size = Vector2(280, 280)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 180.0
offset_top = -140.0
offset_right = 460.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 180
text = "üìÖ"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -130.0
offset_right = 180.0
offset_bottom = -50.0
grow_vertical = 0
icon = ExtResource("2_6ou4h")
expand_icon = true

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -32.0
offset_top = -29.0
offset_right = 1968.0
offset_bottom = 1119.0

[node name="Label" type="Label" parent="TutorialPanel"]
visible = false
layout_mode = 0
offset_left = 561.166
offset_top = 109.679
offset_right = 1507.17
offset_bottom = 331.679
theme_override_font_sizes/font_size = 30
text = "This is the computer
Here you can open one of your 3 apps. Calender, Stocks and Bank"

[node name="TutorialTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="Stocks" to="." method="_on_stocks_pressed"]
[connection signal="pressed" from="Bank" to="." method="_on_bank_pressed"]
[connection signal="pressed" from="Calender" to="." method="_on_calender_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="timeout" from="TutorialTimer" to="." method="_on_tutorial_timer_timeout"]
